# LaCoGSEA

./: .gitignore  LICENSE  LaCoGSEA_run.bat  LaCoGSEA_run.sh  NOTICE  README.md  install_windows.bat  pyproject.toml  requirements.txt  run_gui.bat
.python_runtime/: python.cat
evaluation/figure2_stability/: __init__.py  negative_control_experiment.py  saturation_analysis.py  visualization.py
evaluation/figure3_subtypes/: __init__.py  breast_cancer_clustering.py
evaluation/figure4_clinical/: __init__.py  clinical_relevance.py  lung_cancer_generalization.py  prepare_tcga_lung_data.py
evaluation/figure5_benchmarking/: __init__.py  aggregate_results.py  data_preparation.py  deep_analysis.py  methods.py  run_ae_attribution.py  run_pipeline.py  run_viz_all_adhoc.py  standard_de_analysis.py  visualize.py
lacogsea/: __init__.py  activity.py  barlow_config.py  cli.py  evaluation.py  gene_mapping.py  gui.py  model_structure.py  pipeline.py  plotting.py  run_gsea_java.py  summarize.py  training.py  utils.py
lacogsea/data/: c6.gmt  simulated_unlogged.csv
scripts/: generate_test_data.py
