[project]
name = "lacogsea"
version = "0.1.0"
description = "Lightweight LaCoGSEA core: autoencoder training, RNK generation, GSEA, summary."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "LaCoGSEA Authors"}]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.0.3",
    "torch==2.5.1",
    "matplotlib==3.7.5",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
gui = ["gradio==4.44.1"]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.6"]

[project.scripts]
lacogsea = "lacogsea.cli:main"
lacogsea-gui = "lacogsea.gui:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["extras*", "scripts*"]

[tool.setuptools.package-data]
lacogsea = ["vendor/**/*", "data/*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

