[project]
name = "lacogsea"
version = "0.1.0"
description = "Lightweight LaCoGSEA core: autoencoder training, RNK generation, GSEA, summary."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Zheng Zhiwei", email = "zhengzhiwei@outlook.com"}]
dependencies = [
    'numpy>=1.23.0,<2.0.0; python_version < "3.13"',
    'numpy>=2.1.1; python_version >= "3.13"',
    'pandas>=1.5.1,<3.0.0; python_version < "3.13"',
    'pandas>=2.2.3; python_version >= "3.13"',
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
]

[project.optional-dependencies]
gui = ["gradio>=4.44.1,<5.0.0"]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.6"]

[project.scripts]
lacogsea = "lacogsea.cli:main"
lacogsea-gui = "lacogsea.gui:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["extras*", "scripts*"]

[tool.setuptools.package-data]
lacogsea = ["vendor/**/*", "data/*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

