[project]
name = "lacogsea"
version = "0.1.0"
description = "Lightweight LaCoGSEA core: autoencoder training, RNK generation, GSEA, summary."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Zheng Zhiwei", email = "zhengzhiwei@outlook.com"}]
dependencies = [
    "numpy==1.24.4",
    "pandas==2.0.3",
    "matplotlib==3.7.5",
    "seaborn==0.13.0",
    "torch==2.4.1",
    "gseapy==1.1.9",
    "tqdm==4.67.1",
    "huggingface_hub==0.25.2",
]

[project.optional-dependencies]
gui = ["gradio==4.44.1"]
dev = ["pytest==8.3.5", "ruff==0.14.11"]

[project.scripts]
lacogsea = "lacogsea.cli:main"
lacogsea-gui = "lacogsea.gui:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["extras*", "scripts*"]

[tool.setuptools.package-data]
lacogsea = ["vendor/**/*", "data/*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

